# sinsebeolsik-p2-fcitx5

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.ko.md  README.md
.github/workflows/: build.yml  release.yml
docs/: adding-a-keymap.md  architecture.md  automaton.md  int5-passthrough.md  totem-firmware.md
keymaps/: sinsebeolsik_p2.toml
packaging/: build-deb.sh
packaging/debian/: .gitignore  changelog  control  copyright  rules
scripts/: dev-install.sh  dev-reload.sh  setup-fcitx5-trigger.sh
src/: CMakeLists.txt  addon.conf.in  automaton.cpp  automaton.h  embedded_p2_keymap.cpp.in  engine.cpp  engine.h  jamo.cpp  jamo.h  keymap.cpp  keymap.h  qwerty_translator.cpp  qwerty_translator.h
tests/: CMakeLists.txt  automaton_test.cpp  jamo_test.cpp  keymap_test.cpp  qwerty_translator_test.cpp
